[tool.poetry]
name = "coco"
version = "0.1.0"
description = ""
authors = ["Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2.5"
flask-socketio = "^4.2.1"
eventlet = "^0.25.1"
torch = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
